# nqi

./: .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Makefile  README.md  codecov.yml  docker-compose.dev.yml  docker-compose.yml  go.mod  go.sum
.devcontainer/: Dockerfile  devcontainer.json  post-create.sh
.github/: PULL_REQUEST_TEMPLATE.md  changelog-config.json  labeler.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  codeql.yml  dependency-review.yml  issue-management.yml  pr-management.yml  pr-validation.yml  project-board-automation.yml  release.yml
backend/: Dockerfile.dev  pyproject.toml
backend/scripts/: init-db.sql
cmd/api/: main.go
frontend/: .metadata  README.md  pubspec.yaml
frontend/android/app/: build.gradle.kts
frontend/android/app/src/main/kotlin/com/rghsoftware/nqi_frontend/: MainActivity.kt
frontend/ios/Runner.xcodeproj/: project.pbxproj
frontend/ios/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
frontend/linux/: CMakeLists.txt
frontend/linux/runner/: my_application.cc
frontend/macos/Runner.xcodeproj/: project.pbxproj
frontend/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
frontend/macos/Runner/Configs/: AppInfo.xcconfig
frontend/windows/runner/: Runner.rc
internal/db/: db.go
internal/handler/: user_handler.go
internal/model/: user.go
migrations/: 000001_create_users_table.up.sql
scripts/: db-tools.sh
